# automatic-feedback-sender

./: .env  .gitignore  main.py  pyproject.toml
backend/: app.py  feedback.db
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/email/: Email.tsx
frontend/src/pages/feedbacks/: Feedbacks.tsx
