[project]
name = "automatic-feedback-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "axios>=0.4.0",
    "duckdb>=1.5.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
]
venvPath = "."
venv = ".venv"
